--- a/mail/fetchmail/Makefile
+++ b/mail/fetchmail/Makefile
@@ -10,9 +10,10 @@
 # want fetchmailconf to work, define WITH_X11
 
 PORTNAME=	fetchmail
-PORTVERSION=	5.5.5
+PORTVERSION=	5.5.6
 CATEGORIES=	mail ipv6
-MASTER_SITES=	ftp://ftp.ccil.org/pub/esr/fetchmail/
+MASTER_SITES=	http://www.tuxedo.org/~esr/fetchmail/ \
+		ftp://ftp.ccil.org/pub/esr/fetchmail/
 
 MAINTAINER=	ve@sci.fi
 
