--- a/chinese/linux-netscape47-communicator/Makefile
+++ b/chinese/linux-netscape47-communicator/Makefile
@@ -5,7 +5,7 @@
 # $FreeBSD$
 #
 
-PORTNAME=	${REGION}-netscape-${BROWSER_ARC}
+PORTNAME=	netscape-${BROWSER_ARC}
 PORTVERSION=	${BROWSER_VERSION}
 CATEGORIES=	chinese www
 MASTER_SITES=	ftp://freebsd.sinica.edu.tw/pub/keith/
@@ -21,6 +21,7 @@ RUN_DEPENDS?=	\
 		${X11BASE}/lib/X11/fonts/TrueType/bsmi00lp.ttf:${PORTSDIR}/chinese/arphicttf
 
 # These variables can be defined in ports that include this Makefile.
+PKGNAMEPREFIX?=		zh_TW-
 LOCALE?=		zh_TW.Big5
 REGION?=		tw
 BROWSER?=		communicator
