There are two different tarballs for aalib-1.2 on the internet. There is one copy on the author's ftp site. There is a differnt copy on all the SunSite mirrors.
The difference is small. The SunSite copy contains a config.cache file.
The actual source code is identical.

So, allow this port to work with either tarballs.
We need both checksums in distinfo and we need to delete config.cache
(if it exists) prior to running configure.

Submitted by:	bento which found the problem while the authors site was down

--- a/graphics/aalib/Makefile
+++ b/graphics/aalib/Makefile
@@ -28,6 +28,7 @@ CONFIGURE_ARGS=	--with-x=no
 .endif
 
 post-patch:
+	@${RM} -f ${WRKSRC}/config.cache
 	@${PERL} -pi -e "s|%%LOCALBASE%%|${LOCALBASE}|g;" ${WRKSRC}/configure.in
 
 .include <bsd.port.mk>
