--- a/irc/xchat1/Makefile
+++ b/irc/xchat1/Makefile
@@ -5,40 +5,40 @@
 # $FreeBSD$
 #
 
-PORTNAME=	xchat
-PORTVERSION=	1.4.3
-CATEGORIES+=	irc gnome
-MASTER_SITES=	http://xchat.org/files/source/1.4/ \
-		http://xchat.linuxpower.org/files/source/1.4/
+PORTNAME=		xchat
+PORTVERSION=		1.6.0
+CATEGORIES+=		irc gnome
+MASTER_SITES=		http://xchat.org/files/source/1.6/ \
+			http://xchat.linuxpower.org/files/source/1.6/
 
-MAINTAINER=	jim@FreeBSD.org
+MAINTAINER=		jim@FreeBSD.org
 # This port has a slave port japanese/xchat.  Do not carelessly overwrite
 # the variables or the targets defined in it.  When you need to, please
 # contact its maintainer.
 
-USE_X_PREFIX=	yes
-USE_BZIP2=	yes
-USE_GMAKE=	yes
-USE_PERL5=	yes
-USE_IMLIB=	yes
-WANT_GNOME=	yes
-GNU_CONFIGURE=	yes
+USE_X_PREFIX=		yes
+USE_BZIP2=		yes
+USE_GMAKE=		yes
+USE_PERL5=		yes
+USE_IMLIB=		yes
+WANT_GNOME=		yes
+GNU_CONFIGURE=		yes
 # Assign with `+=' for slave ports
-CONFIGURE_ARGS+=--disable-python
+CONFIGURE_ARGS+=	--disable-python
 
 .include <bsd.port.pre.mk>
 
 .if defined(WITH_SOCKS)
 # Assign with `+=' for slave ports
-BUILD_DEPENDS+=	${LOCALBASE}/lib/libsocks5.a:${PORTSDIR}/net/socks5
-CONFIGURE_ARGS+=--enable-socks
+BUILD_DEPENDS+=		${LOCALBASE}/lib/libsocks5.a:${PORTSDIR}/net/socks5
+CONFIGURE_ARGS+=	--enable-socks
 .endif
 
 .if defined(HAVE_GNOME)
-USE_GNOME=	yes
-CONFIGURE_ARGS+=--enable-gnome --enable-panel --enable-gdk-pixbuf
+USE_GNOME=		yes
+CONFIGURE_ARGS+=	--enable-gnome --enable-panel --enable-gdk-pixbuf
 .else
-CONFIGURE_ARGS+=--disable-gnome --disable-gdk-pixbuf
+CONFIGURE_ARGS+=	--disable-gnome --disable-gdk-pixbuf
 .endif
 
 post-patch:
