--- a/audio/libogg/Makefile
+++ b/audio/libogg/Makefile
@@ -21,6 +21,7 @@ WRKSRC=		${WRKDIR}/ogg
 
 ACLOCAL?=	${LOCALBASE}/bin/aclocal
 AUTOHEADER?=	${LOCALBASE}/bin/autoheader
+AUTOMAKE_ARGS=	--add-missing
 
 post-patch:
 	cd ${WRKSRC} && ${ACLOCAL}
