Upgrade to 0.6.2. The maintainer is now Johann Visagie <johann@egenetics.com>, as discussed with Jacques.
PR:		22835
Submitted by:	Johann Visagie <johann@egenetics.com>

--- a/textproc/py-xml/Makefile
+++ b/textproc/py-xml/Makefile
@@ -5,16 +5,18 @@
 # $FreeBSD$
 #
 
-PORTNAME=		py-xml
-PORTVERSION= 		0.5.4
+PORTNAME=		xml
+PORTVERSION= 		0.6.2
 CATEGORIES=		textproc python
-MASTER_SITES=		http://www.python.org/sigs/xml-sig/files/      \
+MASTER_SITES=		${MASTER_SITE_SOURCEFORGE}                     \
+			http://www.python.org/sigs/xml-sig/files/      \
 			ftp://ftp.cdrom.com/pub/python/www.python.org/sigs/xml-sig/files/ \
-			ftp://ftp.kddlabs.co.jp/pub/lang/python/www.python.org/sigs/xml-sig/files/ \
 			ftp://unix.hensa.ac.uk/mirrors/ftp.python.org/pub/www.python.org/sigs/xml-sig/files/
+MASTER_SITE_SUBDIR=	pyxml
+PKGNAMEPREFIX=		${PYTHON_PKGNAMEPREFIX}
 DISTNAME=		PyXML-${PORTVERSION}
 
-MAINTAINER=		nectar@FreeBSD.org
+MAINTAINER=		johann@egenetics.com
 
 BUILD_DEPENDS=		${PYDISTUTILS}
 
@@ -24,9 +26,11 @@ PLIST=			${WRKDIR}/PLIST
 .include <bsd.port.pre.mk>
 
 .if ${PYTHON_VERSION} == "python1.5"
-PLISTS=			${PKGDIR}/pkg-plist.${PYTHON_VERSION}
+PLIST_SUB+=		PACKAGE_DIR=xml
+.else
+PLIST_SUB+=		PACKAGE_DIR=_xmlplus
 .endif
-PLISTS+=		${PKGDIR}/pkg-plist
+PLISTS=			${PKGDIR}/pkg-plist
 
 .if !defined(NOPORTDOCS)
 DOCDIR=			share/doc/py-xml
@@ -34,13 +38,18 @@ DOCDIR=			share/doc/py-xml
 DOCS1=			xml-howto.txt xml-ref.txt
 # Document files to be installed in ${DOCDIR}/xmlproc
 DOCS2=			artikler.css basicapi.gif cmdline.gif          \
-			standard.css xmlproc-catalog-doco.html         \
-			xmlproc-doco.html xmlproc-dtd-doco.html        \
+			standard.css wxval.gif                         \
+			xmlproc-catalog-doco.html xmlproc-doco.html    \
+			xmlproc-dtd-doco.html xmlproc-license.html     \
 			xmlproc.html xmlproc_cmdline.html              \
 			xmlproc_dtdparser.html xmlproc_ns.html         \
 			xmlproc_tut.html
+# Document files to be installed in ${DOCDIR}/4DOM
+DOCS3=			4DOM.web Extensions.api Extensions.html        \
+			index.html
 # Complete list of document files
-DOCS=			${DOCS1} ${DOCS2:S|^|xmlproc/|}
+DOCS=			${DOCS1} ${DOCS2:S|^|xmlproc/|}                \
+			${DOCS3:S|^|4DOM/|}
 
 # Command to install document file and simultaneously add filename
 # to the packing list
@@ -57,10 +66,12 @@ pre-install:
 .if !defined(NOPORTDOCS)
 	${MKDIR} ${PREFIX}/${DOCDIR}
 	${MKDIR} ${PREFIX}/${DOCDIR}/xmlproc
+	${MKDIR} ${PREFIX}/${DOCDIR}/4DOM
 .for doc in ${DOCS}
 	${INSTALL_DOC:S|@DOC|${doc}|g}
 .endfor
 	${ECHO} @dirrm ${DOCDIR}/xmlproc >> ${PLIST}
+	${ECHO} @dirrm ${DOCDIR}/4DOM >> ${PLIST}
 	${ECHO} @dirrm ${DOCDIR} >> ${PLIST}
 .endif
 
