This port won't make an SSL capable pine anymore now that the c-client library is a separate thing.
A PR has been opened suggesting that the SSL hack be added to the cclient
port. That is the best avenue for now.

--- a/mail/pine4-ssl/Makefile
+++ b/mail/pine4-ssl/Makefile
@@ -24,6 +24,8 @@ PATCHFILES=	${DISTNAME}${EXTRACT_SUFX}
 
 MAINTAINER=	nsayer@freebsd.org
 
+BROKEN=		"The c-client library is no longer built in the pine port, and that's where the SSL hacking needs to happen"
+
 EXTRACT_ONLY=	pine4.21${EXTRACT_SUFX}
 
 WRKSRC=		${WRKDIR}/pine4.21
