- Update to 1.0.2 - Take over maintainership
PR: 22796
Submitted by: Jeremy Norris <ishmael27@home.com>
Approved by: MAINTAINER

--- a/databases/edb/Makefile
+++ b/databases/edb/Makefile
@@ -6,15 +6,19 @@
 #
 
 PORTNAME=	edb
-PORTVERSION=	1.0.1
+PORTVERSION=	1.0.2
 CATEGORIES=	databases
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	enlightenment
 
-MAINTAINER=	bfoz@glue.umd.edu
+MAINTAINER=	ishmael27@home.com
 
-USE_GMAKE=	yes
-GNU_CONFIGURE=	yes
 INSTALLS_SHLIB=	yes
+USE_LIBTOOL=	yes
+CONFIGURE_ARGS=	--enable-compat185 \
+		--enable-dump185 --enable-cxx
+
+post-install:
+	@strip ${PREFIX}/lib/libedb.so.1
 
 .include <bsd.port.mk>
