--- a/deskutils/genius/Makefile
+++ b/deskutils/genius/Makefile
@@ -10,7 +10,7 @@ PORTVERSION=	0.4.6
 CATEGORIES=	deskutils gnome
 MASTER_SITES=	http://ftp.5z.com/pub/genius/
 
-MAINTAINER=	ade@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 
 USE_X_PREFIX=	yes
 USE_GMAKE=	yes
