--- a/security/kssh/Makefile
+++ b/security/kssh/Makefile
@@ -6,20 +6,29 @@
 #
 
 PORTNAME=	kssh
-PORTVERSION=	0.2
+PORTVERSION=	0.4.1
 CATEGORIES=	security
-MASTER_SITES=	${MASTER_SITE_LOCAL}
-MASTER_SITE_SUBDIR=	will
+MASTER_SITES=	http://www.geocities.com/bilibao/
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	kevlo@FreeBSD.org
 
-LIB_DEPENDS=	kdecore.3:${PORTSDIR}/x11/kdelibs11
+LIB_DEPENDS=	jpeg.9:${PORTSDIR}/graphics/jpeg \
+		png.4:${PORTSDIR}/graphics/png \
+		kdecore.4:${PORTSDIR}/x11/kdelibs2
 BUILD_DEPENDS=	gettext:${PORTSDIR}/devel/gettext
 
 GNU_CONFIGURE=	yes
-USE_QT=		yes
+USE_QT2=	yes
+MOC?=           ${X11BASE}/bin/moc2
 USE_GMAKE=	yes
-CONFIGURE_ARGS=	--prefix="${PREFIX}" --datadir="${LOCALBASE}"
-CONFIGURE_ENV=	KDEDIR="${LOCALBASE}"
+CONFIGURE_ARGS+=--prefix="${PREFIX}" --datadir="${LOCALBASE}" \
+		--with-qt-includes=${X11BASE}/include/qt2 \
+		--with-qt-libraries=${X11BASE}/lib \
+		--with-extra-includes=${LOCALBASE}/include \
+		--with-extra-libs=${LOCALBASE}/lib
+CONFIGURE_ENV+=	KDEDIR="${LOCALBASE}" MOC="${MOC}" LIBQT="-lqt2" \
+		LIBQTFILE="libqt2"
+
+WRKSRC=		${WRKDIR}/${PORTNAME}-0.4
 
 .include <bsd.port.mk>
