- Fix build with ocaml-3.07_1
PR:		ports/61012
Submitted by:	Holger Lamm <holger@e-gitt.net> (maintainer)

--- a/net-p2p/mldonkey-devel/Makefile
+++ b/net-p2p/mldonkey-devel/Makefile
@@ -18,7 +18,7 @@ COMMENT?=	A OCAML client for multiple peer-to-peer networks
 BUILD_DEPENDS=	ocamlc:${PORTSDIR}/lang/ocaml
 
 GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--enable-pthread
+CONFIGURE_ARGS=	--enable-pthread --enable-ocamlver=3
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION:C/\.(.)$/-\1/}
 USE_GMAKE=	yes
 ALL_TARGET=	depend opt
