--- a/converters/ktextdecode/Makefile
+++ b/converters/ktextdecode/Makefile
@@ -10,7 +10,7 @@ CATEGORIES=	converters kde
 MASTER_SITES=	http://webua.net/zavolzhsky/download/
 MASTER_SITE_SUBDIR=	${PORTNAME}-${PORTVERSION}
 
-MAINTAINER=	krion@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	The simple text conversion utility for KDE 3
 
 USE_BZIP2=	yes
