--- a/games/easysok/Makefile
+++ b/games/easysok/Makefile
@@ -10,7 +10,7 @@ CATEGORIES=	games kde
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME}
 
-MAINTAINER=	krion@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Easysok is a sokoban game for KDE3
 
 USE_KDELIBS_VER=	3
