--- a/sysutils/krename/Makefile
+++ b/sysutils/krename/Makefile
@@ -11,7 +11,7 @@ CATEGORIES=	sysutils kde
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE}
 MASTER_SITE_SUBDIR=	${PORTNAME}
 
-MAINTAINER=	krion@FreeBSD.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	Very powerful batch file renamer for KDE3
 
 USE_BZIP2=	yes
