Add zope-cmfquickinstaller, a tool which serves as help for installing/uninstalling CMF Products inside a CMF Site.
http://plone.org/collective

PR:		ports/60971
Submitted by:	Khairil Yusof <kaeru@inigo-tech.com>

--- a/www/Makefile
+++ b/www/Makefile
@@ -594,6 +594,7 @@
     SUBDIR += zope-cmf13
     SUBDIR += zope-cmfforum
     SUBDIR += zope-cmfphoto
+    SUBDIR += zope-cmfquickinstaller
     SUBDIR += zope-exuserfolder
     SUBDIR += zope-formulator
     SUBDIR += zope-guf
