- Put distfile on MASTER_SITE_LOCAL until MASTER_SITE_SAVANNAH gets back up
PR:		ports/61049
Submitted by:	Matthias Andree <matthias.andree@gmx.de> (maintainer)

--- a/audio/squash/Makefile
+++ b/audio/squash/Makefile
@@ -8,9 +8,12 @@ PORTNAME=		squash
 PORTVERSION=		1.0.p1
 PORTREVISION=		3
 CATEGORIES=		audio
-MASTER_SITES=		${MASTER_SITE_SAVANNAH}
-MASTER_SITE_SUBDIR=	squash
+MASTER_SITES=		${MASTER_SITE_SAVANNAH} \
+       			${MASTER_SITE_LOCAL:S/$/:local/}
+MASTER_SITE_SUBDIR=	${PORTNAME} \
+			pav/:local
 DISTNAME=		squash-1.0pre1
+DISTFILES=		${DISTNAME}${EXTRACT_SUFX}:DEFAULT,local
 
 MAINTAINER=	matthias.andree@gmx.de
 COMMENT=	Learning console-based MP3/OGG player
