- Put distfile on MASTER_SITE_LOCAL until Savannah is restored

--- a/science/gchemutils/Makefile
+++ b/science/gchemutils/Makefile
@@ -7,9 +7,12 @@
 PORTNAME=	gchemutils
 PORTVERSION=	0.2.0
 CATEGORIES=	science
-MASTER_SITES=	${MASTER_SITE_SAVANNAH}
-MASTER_SITE_SUBDIR=	${PORTNAME}/stable.pkg/${PORTVERSION}
+MASTER_SITES=	${MASTER_SITE_SAVANNAH} \
+		${MASTER_SITE_LOCAL:S/$/:local/}
+MASTER_SITE_SUBDIR=	${PORTNAME}/stable.pkg/${PORTVERSION} \
+		pav/:local
 DISTNAME=	gnome-chemistry-utils-${PORTVERSION}
+DISTFILES=	${DISTNAME}${EXTRACT_SUFX}:DEFAULT,local
 
 MAINTAINER=	pav@FreeBSD.org
 COMMENT=	C++ classes and Gtk2 widgets related to chemistry
