Add zope-btreefolder2, a Zope product that acts like a Zope folder but can store many more items.
It also includes CMFBTreeFolder if you have CMF installed.

WWW:    http://hathaway.freezope.org/Software/BTreeFolder2

PR:		ports/60973
Submitted by:	Khairil Yusof <kaeru@inigo-tech.com>

--- a/www/Makefile
+++ b/www/Makefile
@@ -590,6 +590,7 @@
     SUBDIR += zope-FileSystemSite
     SUBDIR += zope-annotations
     SUBDIR += zope-archetypes
+    SUBDIR += zope-btreefolder2
     SUBDIR += zope-cmf
     SUBDIR += zope-cmf13
     SUBDIR += zope-cmfforum
