Update port: editors/tpad fixed some bugs and added new features
	Changes in 1.1 (7 Gen 2004)
	- I forgot to catch the kill of the window manager!
	  Now it's fixed.
	- Fixed a bug which caused an extra newline to be
	  added to the end of the text.
	- Added a facility to produce log files with tpad
	  (see help for details).
	- Get tpad to produce an appicon for WindowMaker.
	- Now you can configure the color of the selection
	  and the date/time format.
	- Added a simple print option which uses lpr(1).
	- Added a global configuration file tpad.conf,
	  separated from the main program code.
	  Also supports per-user configuration files
	  (named ~/.tpadrc).
	- Added HTML 2.0 help files and the Help option under
	  the Help menu.

PR:		ports/61023
Submitted by:	Antonio Bonifati <ant@venus.deis.unical.it>

--- a/editors/tpad/Makefile
+++ b/editors/tpad/Makefile
@@ -6,13 +6,10 @@
 #
 
 PORTNAME=	tpad
-PORTVERSION=	1.0
+PORTVERSION=	1.1
 CATEGORIES=	editors tcl84 tk84
 MASTER_SITES=	http://monitor.deis.unical.it/ant/tpad/ \
 		http://queen.rett.polimi.it/~ant/tcl/script/
-DISTNAME=	${PORTNAME}-${PORTVERSION}.tcl
-EXTRACT_SUFX=
-EXTRACT_ONLY=
 
 MAINTAINER=	ant@monitor.deis.unical.it
 COMMENT=	Win95/98 (TM) Notepad clone written in Tcl/Tk
@@ -20,8 +17,24 @@ COMMENT=	Win95/98 (TM) Notepad clone written in Tcl/Tk
 RUN_DEPENDS=	wish8.4:${PORTSDIR}/x11-toolkits/tk84
 
 NO_BUILD=	yes
+PKGMESSAGE=	${WRKDIR}/MESSAGE
+
+PORTDOCS=	ChangeLog conf.html index.html intro.html keys.html \
+		log.html mouse.html todo tpad.html
 
 do-install:
-	${INSTALL_SCRIPT} ${DISTDIR}/${DISTFILES} ${PREFIX}/bin/tpad
+	${INSTALL_SCRIPT} ${WRKDIR}/bin/tpad ${PREFIX}/bin/tpad
+
+post-install:
+.if !defined(NOPORTDOCS)
+	@${MKDIR} ${DOCSDIR}
+.for docfile in ${PORTDOCS}
+	${INSTALL_DATA} ${WRKDIR}/share/doc/tpad/${docfile} ${DOCSDIR}
+.endfor
+.endif
+	${INSTALL_DATA} ${WRKDIR}/etc/tpad.conf \
+		${PREFIX}/etc/tpad.conf.sample
+	@${SED} -e 's,%%PREFIX%%,${PREFIX},g' ${PKGDIR}/pkg-message > ${PKGMESSAGE}
+	@${CAT} ${PKGMESSAGE}
 
 .include <bsd.port.mk>
