new port: www/adzap2squirm
	adzap2Squirm is a Perl script to take an Ad Zapper pattern
	file (or the original Ad Zapper script itself, which includes
	the patterns) and write out a corresponding file of patterns
	which Squirm can use for ad zapping.  This port also includes
	a modified update-zapper (from the Ad Zapper) so that updates
	of the ad definitions can be run through cron

PR:		ports/56359
Submitted by:	rmuir@radford.edu

--- a/www/Makefile
+++ b/www/Makefile
@@ -8,6 +8,7 @@
     SUBDIR += abcache
     SUBDIR += admuser
     SUBDIR += adzap
+    SUBDIR += adzap2squirm
     SUBDIR += amaya
     SUBDIR += amyc
     SUBDIR += analog
