--- a/www/dansguardian/files/patch-autoconf::fbsd.in
+++ b/www/dansguardian/files/patch-autoconf::fbsd.in
@@ -1,5 +1,5 @@
---- autoconf/fbsd.in.orig	Wed Nov 19 16:06:41 2003
-+++ autoconf/fbsd.in	Mon Nov 24 11:14:17 2003
+--- autoconf/fbsd.in.orig	Tue Dec 23 16:17:18 2003
++++ autoconf/fbsd.in	Wed Jan  7 14:48:42 2004
 @@ -20,7 +20,7 @@
  		 logrotate.dansguardian
  
@@ -9,17 +9,31 @@
  PASSVARS += -DCONFFILELOCATION=\"${CONFFILELOCATION}dansguardian.conf\"
  PASSVARS += -DPIDDIR=\"${PIDDIR}\"
  
-@@ -41,52 +41,83 @@
- 	$(CPP) -o dansguardian $(DGCFLAGS) $(DEBUG) $(OBJ) $(LIBS) dansguardian.cpp
- 
- install:
--	@test -d $I$(SYSVLOCATION) || install -d $I$(SYSVLOCATION)
--	@test -d $I$(CONFFILELOCATION) || install -d $I$(CONFFILELOCATION)
--	@test -d $I$(CONFFILELOCATION)phraselists || install -d $I$(CONFFILELOCATION)phraselists
--	@test -d $I$(CGIBINLOCATION) || install -d $I$(CGIBINLOCATION)
--	@test -d $I$(MANUALFILES)man8/ || install -d $I$(MANUALFILES)man8/
+@@ -44,49 +44,79 @@
+ 	@test -d $I$(SYSVLOCATION) || install -d $I$(SYSVLOCATION)
+ 	@test -d $I$(CONFFILELOCATION) || install -d $I$(CONFFILELOCATION)
+ 	@test -d $I$(CONFFILELOCATION)phraselists || install -d $I$(CONFFILELOCATION)phraselists
++	@test -d $I$(CONFFILELOCATION)phraselists/chat || install -d $I$(CONFFILELOCATION)phraselists/chat
++	@test -d $I$(CONFFILELOCATION)phraselists/drugadvocacy || install -d $I$(CONFFILELOCATION)phraselists/drugadvocacy
++	@test -d $I$(CONFFILELOCATION)phraselists/dutchbadwords || install -d $I$(CONFFILELOCATION)phraselists/dutchbadwords
++	@test -d $I$(CONFFILELOCATION)phraselists/frenchbadwords || install -d $I$(CONFFILELOCATION)phraselists/frenchbadwords
++	@test -d $I$(CONFFILELOCATION)phraselists/gambling || install -d $I$(CONFFILELOCATION)phraselists/gambling
++	@test -d $I$(CONFFILELOCATION)phraselists/germanpornography || install -d $I$(CONFFILELOCATION)phraselists/germanpornography
++	@test -d $I$(CONFFILELOCATION)phraselists/goodphrases || install -d $I$(CONFFILELOCATION)phraselists/goodphrases
++	@test -d $I$(CONFFILELOCATION)phraselists/gore || install -d $I$(CONFFILELOCATION)phraselists/gore
++	@test -d $I$(CONFFILELOCATION)phraselists/illegaldrugs || install -d $I$(CONFFILELOCATION)phraselists/illegaldrugs
++	@test -d $I$(CONFFILELOCATION)phraselists/intolerance || install -d $I$(CONFFILELOCATION)phraselists/intolerance
++	@test -d $I$(CONFFILELOCATION)phraselists/italianbadwords || install -d $I$(CONFFILELOCATION)phraselists/italianbadwords
++	@test -d $I$(CONFFILELOCATION)phraselists/legaldrugs || install -d $I$(CONFFILELOCATION)phraselists/legaldrugs
++	@test -d $I$(CONFFILELOCATION)phraselists/personals || install -d $I$(CONFFILELOCATION)phraselists/personals
++	@test -d $I$(CONFFILELOCATION)phraselists/pornography || install -d $I$(CONFFILELOCATION)phraselists/pornography
++	@test -d $I$(CONFFILELOCATION)phraselists/violence || install -d $I$(CONFFILELOCATION)phraselists/violence
++	@test -d $I$(CONFFILELOCATION)phraselists/warezhacking || install -d $I$(CONFFILELOCATION)phraselists/warezhacking
++	@test -d $I$(CONFFILELOCATION)phraselists/weapons || install -d $I$(CONFFILELOCATION)phraselists/weapons
+ 	@test -d $I$(CGIBINLOCATION) || install -d $I$(CGIBINLOCATION)
+ 	@test -d $I$(MANUALFILES)man8/ || install -d $I$(MANUALFILES)man8/
 -	@test -d $I$(LOGLOCATION) || install -d $I$(LOGLOCATION)
--	@test -d $I$(BINARYLOCATION) || install -d $I$(BINARYLOCATION)
+ 	@test -d $I$(BINARYLOCATION) || install -d $I$(BINARYLOCATION)
 -	cp -f ./dansguardian $I$(BINARYLOCATION)dansguardian
 -	cp -f ./dansguardian.conf $I$(CONFFILELOCATION)dansguardian.conf
 -	cp -f ./bannedphraselist $I$(CONFFILELOCATION)bannedphraselist
@@ -50,86 +64,62 @@
 -	chmod -R u+wr $I$(LOGLOCATION)
 -	chmod u+wrx $I$(LOGLOCATION)
 -	if [ -d $(LOGROTATELOCATION) ]; then cp -f ./logrotate.dansguardian $I$(LOGROTATELOCATION)dansguardian; fi
-+	install -d $I$(CONFFILELOCATION)
-+	install -d $I$(CONFFILELOCATION)phraselists
-+	install -d $I$(CONFFILELOCATION)phraselists/chat
-+	install -d $I$(CONFFILELOCATION)phraselists/drugadvocacy
-+	install -d $I$(CONFFILELOCATION)phraselists/dutchbadwords
-+	install -d $I$(CONFFILELOCATION)phraselists/frenchbadwords
-+	install -d $I$(CONFFILELOCATION)phraselists/gambling
-+	install -d $I$(CONFFILELOCATION)phraselists/germanpornography
-+	install -d $I$(CONFFILELOCATION)phraselists/goodphrases
-+	install -d $I$(CONFFILELOCATION)phraselists/gore
-+	install -d $I$(CONFFILELOCATION)phraselists/illegaldrugs
-+	install -d $I$(CONFFILELOCATION)phraselists/intolerance
-+	install -d $I$(CONFFILELOCATION)phraselists/italianbadwords
-+	install -d $I$(CONFFILELOCATION)phraselists/legaldrugs
-+	install -d $I$(CONFFILELOCATION)phraselists/personals
-+	install -d $I$(CONFFILELOCATION)phraselists/pornography
-+	install -d $I$(CONFFILELOCATION)phraselists/violence
-+	install -d $I$(CONFFILELOCATION)phraselists/warezhacking
-+	install -d $I$(CONFFILELOCATION)phraselists/weapons
-+	install -d $I$(CGIBINLOCATION)
-+	install -d $I$(MANUALFILES)man8/
-+	install -d $I$(LOGLOCATION)
-+	install -d $I$(BINARYLOCATION)
 +	install -o root -g wheel -m 755 ./dansguardian $I$(BINARYLOCATION)dansguardian
-+	install -o root -g wheel -m 644 ./dansguardian.conf $I$(CONFFILELOCATION)dansguardian.conf
-+	install -o root -g wheel -m 644 ./bannedphraselist $I$(CONFFILELOCATION)bannedphraselist
-+	install -o root -g wheel -m 644 ./exceptionphraselist $I$(CONFFILELOCATION)exceptionphraselist
-+	install -o root -g wheel -m 644 ./weightedphraselist $I$(CONFFILELOCATION)weightedphraselist
-+	install -o root -g wheel -m 644 ./phraselists/chat/weighted $I$(CONFFILELOCATION)phraselists/chat/weighted
-+	install -o root -g wheel -m 644 ./phraselists/drugadvocacy/weighted $I$(CONFFILELOCATION)phraselists/drugadvocacy/weighted
-+	install -o root -g wheel -m 644 ./phraselists/dutchbadwords/weighted $I$(CONFFILELOCATION)phraselists/dutchbadwords/weighted
-+	install -o root -g wheel -m 644 ./phraselists/frenchbadwords/weighted $I$(CONFFILELOCATION)phraselists/frenchbadwords/weighted
-+	install -o root -g wheel -m 644 ./phraselists/gambling/banned $I$(CONFFILELOCATION)phraselists/gambling/banned
-+	install -o root -g wheel -m 644 ./phraselists/gambling/weighted $I$(CONFFILELOCATION)phraselists/gambling/weighted
-+	install -o root -g wheel -m 644 ./phraselists/germanpornography/weighted $I$(CONFFILELOCATION)phraselists/germanpornography/weighted
-+	install -o root -g wheel -m 644 ./phraselists/goodphrases/exception $I$(CONFFILELOCATION)phraselists/goodphrases/exception
-+	install -o root -g wheel -m 644 ./phraselists/goodphrases/weighted $I$(CONFFILELOCATION)phraselists/goodphrases/weighted
-+	install -o root -g wheel -m 644 ./phraselists/gore/weighted $I$(CONFFILELOCATION)phraselists/gore/weighted
-+	install -o root -g wheel -m 644 ./phraselists/illegaldrugs/banned $I$(CONFFILELOCATION)phraselists/illegaldrugs/banned
-+	install -o root -g wheel -m 644 ./phraselists/illegaldrugs/weighted $I$(CONFFILELOCATION)phraselists/illegaldrugs/weighted
-+	install -o root -g wheel -m 644 ./phraselists/intolerance/banned $I$(CONFFILELOCATION)phraselists/intolerance/banned
-+	install -o root -g wheel -m 644 ./phraselists/intolerance/weighted $I$(CONFFILELOCATION)phraselists/intolerance/weighted
-+	install -o root -g wheel -m 644 ./phraselists/italianbadwords/weighted $I$(CONFFILELOCATION)phraselists/italianbadwords/weighted
-+	install -o root -g wheel -m 644 ./phraselists/legaldrugs/weighted $I$(CONFFILELOCATION)phraselists/legaldrugs/weighted
-+	install -o root -g wheel -m 644 ./phraselists/personals/weighted $I$(CONFFILELOCATION)phraselists/personals/weighted
-+	install -o root -g wheel -m 644 ./phraselists/pornography/banned $I$(CONFFILELOCATION)phraselists/pornography/banned
-+	install -o root -g wheel -m 644 ./phraselists/pornography/weighted $I$(CONFFILELOCATION)phraselists/pornography/weighted
-+	install -o root -g wheel -m 644 ./phraselists/violence/weighted $I$(CONFFILELOCATION)phraselists/violence/weighted
-+	install -o root -g wheel -m 644 ./phraselists/warezhacking/weighted $I$(CONFFILELOCATION)phraselists/warezhacking/weighted
-+	install -o root -g wheel -m 644 ./phraselists/weapons/weighted $I$(CONFFILELOCATION)phraselists/weapons/weighted
-+	install -o root -g wheel -m 644 ./bannediplist $I$(CONFFILELOCATION)bannediplist
-+	install -o root -g wheel -m 644 ./banneduserlist $I$(CONFFILELOCATION)banneduserlist
-+	install -o root -g wheel -m 644 ./bannedextensionlist $I$(CONFFILELOCATION)bannedextensionlist
-+	install -o root -g wheel -m 644 ./bannedmimetypelist $I$(CONFFILELOCATION)bannedmimetypelist
-+	install -o root -g wheel -m 644 ./bannedurllist $I$(CONFFILELOCATION)bannedurllist
-+	install -o root -g wheel -m 644 ./bannedregexpurllist $I$(CONFFILELOCATION)bannedregexpurllist
-+	install -o root -g wheel -m 644 ./bannedsitelist $I$(CONFFILELOCATION)bannedsitelist
-+	install -o root -g wheel -m 644 ./contentregexplist $I$(CONFFILELOCATION)contentregexplist
-+	install -o root -g wheel -m 644 ./exceptionsitelist $I$(CONFFILELOCATION)exceptionsitelist
-+	install -o root -g wheel -m 644 ./exceptionurllist $I$(CONFFILELOCATION)exceptionurllist
-+	install -o root -g wheel -m 644 ./exceptionuserlist $I$(CONFFILELOCATION)exceptionuserlist
-+	install -o root -g wheel -m 644 ./exceptioniplist $I$(CONFFILELOCATION)exceptioniplist
-+	install -o root -g wheel -m 644 ./pics $I$(CONFFILELOCATION)pics
-+	install -o root -g wheel -m 644 ./template.html $I$(CONFFILELOCATION)template.html
-+	install -o root -g wheel -m 644 ./messages $I$(CONFFILELOCATION)messages
-+	install -o root -g wheel -m 755 ./dansguardian.bsdv $I$(SYSVLOCATION)start-dg.sh
-+	install -o root -g wheel -m 755 ./dansguardian.pl $I$(CGIBINLOCATION)dansguardian.pl
++	install -o root -g wheel -m 644 ./dansguardian.conf $I$(CONFFILELOCATION)dansguardian.conf.dist
++	install -o root -g wheel -m 644 ./bannedphraselist $I$(CONFFILELOCATION)bannedphraselist.dist
++	install -o root -g wheel -m 644 ./exceptionphraselist $I$(CONFFILELOCATION)exceptionphraselist.dist
++	install -o root -g wheel -m 644 ./weightedphraselist $I$(CONFFILELOCATION)weightedphraselist.dist
++	install -o root -g wheel -m 644 ./phraselists/chat/weighted $I$(CONFFILELOCATION)phraselists/chat/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/drugadvocacy/weighted $I$(CONFFILELOCATION)phraselists/drugadvocacy/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/dutchbadwords/weighted $I$(CONFFILELOCATION)phraselists/dutchbadwords/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/frenchbadwords/weighted $I$(CONFFILELOCATION)phraselists/frenchbadwords/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/gambling/banned $I$(CONFFILELOCATION)phraselists/gambling/banned.dist
++	install -o root -g wheel -m 644 ./phraselists/gambling/weighted $I$(CONFFILELOCATION)phraselists/gambling/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/germanpornography/weighted $I$(CONFFILELOCATION)phraselists/germanpornography/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/goodphrases/exception $I$(CONFFILELOCATION)phraselists/goodphrases/exception.dist
++	install -o root -g wheel -m 644 ./phraselists/goodphrases/weighted $I$(CONFFILELOCATION)phraselists/goodphrases/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/gore/weighted $I$(CONFFILELOCATION)phraselists/gore/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/illegaldrugs/banned $I$(CONFFILELOCATION)phraselists/illegaldrugs/banned.dist
++	install -o root -g wheel -m 644 ./phraselists/illegaldrugs/weighted $I$(CONFFILELOCATION)phraselists/illegaldrugs/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/intolerance/weighted $I$(CONFFILELOCATION)phraselists/intolerance/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/italianbadwords/weighted $I$(CONFFILELOCATION)phraselists/italianbadwords/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/legaldrugs/weighted $I$(CONFFILELOCATION)phraselists/legaldrugs/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/personals/weighted $I$(CONFFILELOCATION)phraselists/personals/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/pornography/banned $I$(CONFFILELOCATION)phraselists/pornography/banned.dist
++	install -o root -g wheel -m 644 ./phraselists/pornography/weighted $I$(CONFFILELOCATION)phraselists/pornography/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/violence/weighted $I$(CONFFILELOCATION)phraselists/violence/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/warezhacking/weighted $I$(CONFFILELOCATION)phraselists/warezhacking/weighted.dist
++	install -o root -g wheel -m 644 ./phraselists/weapons/weighted $I$(CONFFILELOCATION)phraselists/weapons/weighted.dist
++	install -o root -g wheel -m 644 ./bannediplist $I$(CONFFILELOCATION)bannediplist.dist
++	install -o root -g wheel -m 644 ./banneduserlist $I$(CONFFILELOCATION)banneduserlist.dist
++	install -o root -g wheel -m 644 ./bannedextensionlist $I$(CONFFILELOCATION)bannedextensionlist.dist
++	install -o root -g wheel -m 644 ./bannedmimetypelist $I$(CONFFILELOCATION)bannedmimetypelist.dist
++	install -o root -g wheel -m 644 ./bannedurllist $I$(CONFFILELOCATION)bannedurllist.dist
++	install -o root -g wheel -m 644 ./bannedregexpurllist $I$(CONFFILELOCATION)bannedregexpurllist.dist
++	install -o root -g wheel -m 644 ./bannedsitelist $I$(CONFFILELOCATION)bannedsitelist.dist
++	install -o root -g wheel -m 644 ./contentregexplist $I$(CONFFILELOCATION)contentregexplist.dist
++	install -o root -g wheel -m 644 ./exceptionsitelist $I$(CONFFILELOCATION)exceptionsitelist.dist
++	install -o root -g wheel -m 644 ./exceptionurllist $I$(CONFFILELOCATION)exceptionurllist.dist
++	install -o root -g wheel -m 644 ./exceptionuserlist $I$(CONFFILELOCATION)exceptionuserlist.dist
++	install -o root -g wheel -m 644 ./exceptioniplist $I$(CONFFILELOCATION)exceptioniplist.dist
++	install -o root -g wheel -m 644 ./pics $I$(CONFFILELOCATION)pics.dist
++	install -o root -g wheel -m 644 ./template.html $I$(CONFFILELOCATION)template.html.dist
++	install -o root -g wheel -m 644 ./messages $I$(CONFFILELOCATION)messages.dist
++	install -o root -g wheel -m 755 ./dansguardian.bsdv $I$(SYSVLOCATION)start-dg.sh.dist
++	install -o root -g wheel -m 755 ./dansguardian.pl $I$(CGIBINLOCATION)dansguardian.pl.dist
 +	install -o root -g wheel -m 644 ./dansguardian.8 $I$(MANUALFILES)man8/dansguardian.8
-+	install -o nobody -g nogroup -m 644 /dev/null $I$(LOGLOCATION)dansguardian.log
++	@test -f $I$(LOGLOCATION)/dansguardian.log || install -o nobody -g nogroup -m 644 /dev/null $I$(LOGLOCATION)dansguardian.log
  
  uninstall:
  	rm -f $(BINARYLOCATION)dansguardian
  	rm -f $(SYSVLOCATION)dansguardian
  	rm -f $(CGIBINLOCATION)dansguardian.pl
 -	rm -f $(MANUALFILES)man8/dansguardian.8.gz
-+	rm -f $(MANUALFILES)man8/dansguardian.8*
++	rm -fr $(MANUALFILES)man8/dansguardian.8*
  	rm -fr $(CONFFILELOCATION)
 -	rm -fr $(LOGLOCATION)
 -	if [ -f $(LOGROTATELOCATION)dansguardian ]; then rm -f $(LOGROTATELOCATION)dansguardian; fi
-+	rm -fr $(LOGLOCATION)dansguardian.log
++	rm -f $(LOGLOCATION)/dansguardian.log
  
  clean:
  	rm -f $(OBJ) $(PROG)
