New port: japanese/multiskkserv
	multiskkserv is a skk server which can search multiple
	dictionaries.  This server uses cdb format as the dictionary
	format.  cdb is the efficient and constant (i.e. cannot
	add, delete, modify) database format by Dan J. Bernstein,
	which I think is the appropriate format for the system-wide
	constant dictionary storage.

	This is very experimental.

PR:		ports/60645
Submitted by:	Takahiro Morishita <morishita@skywing.org>

--- a/japanese/Makefile
+++ b/japanese/Makefile
@@ -233,6 +233,7 @@
     SUBDIR += mule-sj3+wnn7
     SUBDIR += mule-wnn6
     SUBDIR += mule-wnn7
+    SUBDIR += multiskkserv
     SUBDIR += mutt
     SUBDIR += mutt-devel
     SUBDIR += mypaedia-fpw
