[NEW PORT] deskutils/moregroupware: A web based GroupWare system
	Another groupware system:

	Moregroupware is a web-based groupware application.
	Some of the features that are worth being mentioned:
		Contact/address management
		Webmail
		full-featured Calendar
		ToDo management
		News
		Project management
		Some preferences for each module
		Skins based on Cascading Style Sheets

	WWW: http://moregroupware.sourceforge.net/

PR:		ports/60715,ports/59157
Submitted by:	Rob Evers <rob@debank.tv>,Sebastian Yepes F. [ESN] <esn@x123.info>

--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -70,6 +70,7 @@
     SUBDIR += mhc-xemacs21-mule
     SUBDIR += mnemo
     SUBDIR += moneydance
+    SUBDIR += moregroupware
     SUBDIR += mrproject
     SUBDIR += multi-backgrounds-daemon
     SUBDIR += multisync
