New port: converters/fix-mime-charset - Fix incorrect Content-Type MIME headers of e-mail messages
	Categories: converters textproc russian ukrainian

	Fix-mime-charset automatically detects character sets of
	email message and modifies the Content-Type header
	appropriately. It can be used as mail filter in mailing
	lists where users often set the charset of their messages
	incorrectly. It processes messages fast and accurately,
	ignoring attachments, and correctly interprets transfer-encodings.
	None but the Content-Type header is changed.

PR:		ports/61050
Submitted by:	Nosov Artem <chip-set@mail.ru>

--- a/converters/Makefile
+++ b/converters/Makefile
@@ -12,6 +12,7 @@
     SUBDIR += dumpasn1
     SUBDIR += enca
     SUBDIR += fconv
+    SUBDIR += fix-mime-charset
     SUBDIR += fribidi
     SUBDIR += gbase
     SUBDIR += i18ntools
